--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon index.js"
 	},
 	"author": "",
 	"type": "module",
@@ -17,6 +18,7 @@
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.1",
+		"nodemon": "^3.1.9",
 		"route": "^0.2.5",
 		"router": "^2.2.0",
 		"routes": "^2.1.0"
